# Chess-Gui

./: .gitignore  CMakeLists.txt  README.md
include/: Board.h  Button.h  Constants.h  Convert.h  Fen.h  GameManager.h  Menus.h  MoveGen.h  Piece.h  Renderer.h  Settings.h  Utils.h
src/: Board.cpp  Button.cpp  Convert.cpp  Fen.cpp  GameManager.cpp  Menus.cpp  MoveGen.cpp  Piece.cpp  Renderer.cpp  Settings.cpp  Utils.cpp  main.cpp
tests/: BoardTests.cpp  CMakeLists.txt  GameManagerTests.cpp  MoveGenTests.cpp  tests.cpp
tests/TestSuite/: CMakeLists.txt  TestSuite.cpp  TestSuite.h
